fixed appointments and dark mode

--- a/src/style/dark-mode.css
+++ b/src/style/dark-mode.css
@@ -355,3 +355,30 @@ body.dark-mode .delete-btn-modal:hover {
 body.dark-mode .modal {
   background: rgba(0, 0, 0, 0.5) !important;
 }
+body.dark-mode .welcome-page-container {
+  background-color: #221f1f;
+  color: #ffffff;
+  transition: background-colory 0.01s, color 0.9s, border-color 0.1s;
+}
+body.dark-mode .welcome-message {
+  background-color: #221f1f;
+  color: #ffffff;
+  transition: background-colory 0.01s, color 0.9s, border-color 0.1s;
+}
+body.dark-mode .appointment-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background: linear-gradient(to right, #fff7f6);
+  margin: 5px;
+  padding: 10px;
+  width: 200px;
+  box-sizing: border-box;
+  cursor: pointer;
+  animation: gradientAnimation 5s linear infinite;
+  transition: box-shadow 0.3s ease-in-out;
+}
+body.dark-mode .appointment-card:hover {
+  transition: box-shadow 0.3s ease-in-out;
+  box-shadow: inset 0 0 0 5px #0d6efd; /* Inner border */
+  height: 100%;
+}
